second commit of clone of original inventory app.  I mistakenly pushed the original along with several videos for the video userguide, and they have remained in the cache which has become too large and is preventing any further commits.  I'll deal with this a bit further on once the app is largely complete.
Added a few changes to the way that item and box duplicates are processed.  When a duplicate is detected, origin, destination and destination select elements all disappear, as well as navigation button, only leaving the warning and the opportunity for user to change item or box name, or to cancel modification of box or item and go back to choose an alternative destionation for box/item or to cancel transfer completely

--- a/src/App.css
+++ b/src/App.css
@@ -5,6 +5,7 @@
   --btn-font-small: 9px;
   --btn-font-v-small: 7px;
 
+  --backgnd-color-yellow:yellow;
 
   --para-font-size-vsmall:5px;
   --para-font-size-small:8px;
@@ -76,7 +77,7 @@ color: var(--text-clr-destination);
 .text-shadow-heading{text-shadow: 0.3px 0.3px white;}
 
 #root {
-  width: 60%;
+  width: 90%;
 
   margin: auto;
   padding: 0.5rem;
@@ -249,20 +250,21 @@ label{font-size: 10px;}
 .advice-div-container{position: relative; width: 100%; height: auto; background-color: rgba(255, 255, 0, 0);}
 .transfer-button{color: white; background-color: rgb(154, 221, 52); font-weight: bold; font-size: 7px;}
 .new-delete-button{color: white; background-color: rgb(154, 221, 52); font-weight: bold; font-size: 7px;}
-.transfer-elements-container, .navigation-btn-container{display: flex; flex-direction: row; justify-content: space-between; width: 100%; height: fit-content; margin-bottom: var(--element-margin-bottom-medium);}
-.origin{background-color: var(--button-go-back-color); border-color: var(--border-color-white); font-size: var(--btn-font-medium);
-margin-top: var(--element-margin-bottom-medium);
+.transfer-elements-container{display: flex; flex-direction: row; justify-content: space-between; width: 100%; height: fit-content; margin-bottom: var(--element-margin-bottom-medium);}
+
+
+
+
+.origin{background-color: var(--button-go-back-color); border-color: var(--border-color-white); 
 }
-.destination{background-color: var(--button-go-forward-color); border-color: var(--border-color-white); font-size: var(--btn-font-medium);}
+.destination{background-color: var(--button-go-forward-color); border-color: var(--border-color-white);}
 
 .element-div{ border: solid var(--border-color-white); width: fit-content; height: auto; padding: 7px; background-color: rgba(163, 163, 160, 0.795);   margin-bottom: var(--element-margin-bottom-large); padding-bottom: 1rem;}
 
 
 
-.apply-transfer-btn,  .cancel-item-rename-btn, .cancel-transfer-btn{border: solid var(--border-color-white); font-size: var(--btn-font-medium); margin-bottom: var(--element-margin-bottom-large);}
-
 .tranfer-info-para{font-size: var(--btn-font-large);}
-.transfer-btn-container{width: 100%; display: flex; flex-direction: row; justify-content: space-between;}
+.transfer-btn-container, .navigation-btn-container{width: 100%; display: flex; flex-direction: row; justify-content: space-between;}
 .cancel-transfer-btn, .cancel-item-rename-btn{background-color: var(--button-go-back-color);}
 .apply-transfer-btn{background-color: var(--button-go-forward-color);}
 
@@ -342,7 +344,7 @@ select{font-size: var(--btn-font-small);}
 
 
 
-.start-select{height: fit-content; width: 30%; background-color: var(--border-color-blue);}
+.start-select{height: fit-content; width: 30%; background-color: var(--border-color-blue); font-size: var(--btn-font-small);}
 
 .video-holder{width: 100%; height: fit-content; border: solid var(--border-color-white); border-radius: var(--border-rad-large); display: flex; flex-wrap: wrap; background-color: rgba(255, 0, 0, 0); justify-content: space-around; padding: 5px 0px;}
 
@@ -363,3 +365,8 @@ select{font-size: var(--btn-font-small);}
 .destination-box{color: var(--text-clr-origin);}
 .box-names-div{background-color: rgb(180, 177, 177); margin: auto; width: fit-content; height: auto; border-radius: var(--border-rad-small); padding: 2% 4%;}
 .warn-elem-dest-heading{color: white;}
+.box-name-change, .item-name-change{color: var(--font-color-red); background-color: var(--backgnd-color-yellow);}
+
+
+
+.apply-transfer-btn,  .cancel-item-rename-btn, .cancel-transfer-btn, .origin, .destination{border: solid var(--border-color-white); font-size: var(--btn-font-medium); margin-bottom: var(--element-margin-bottom-large);}
